--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,96 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
-      @media (min-width: 980px) { 
-        body {
-         padding-top: 60px;
-        }
-       .linediv-l {
-         border-right: 1px white solid;
-        }
-       .linediv-r {
-         border-left: 1px white solid;
-       }
+      @media (min-width: 980px) {
+          body {
+              padding-top: 60px;
+          }
+          .linediv-l {
+              border-right: 1px white solid;
+          }
+          .linediv-r {
+              border-left: 1px white solid;
+          }
       }
 
       /* Landscape phones and down */
-      @media (max-width: 480px) { 
-       .copy {
-         padding: 2.5% 10%;
-       }
-       .linediv-l {
-         border-bottom: 1px white solid;
-       }
-       .linediv-r {
-         border-top: 1px white solid;
-       }
+      @media (max-width: 480px) {
+          .copy {
+              padding: 2.5% 10%;
+          }
+          .linediv-l {
+              border-bottom: 1px white solid;
+          }
+          .linediv-r {
+              border-top: 1px white solid;
+          }
       }
 
       /* All form factors */
 
       /* Main body and headings */
       body{
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+          font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
-        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-        text-align: center;
+          font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+          text-align: center;
       }
       p.lead {
-        padding-top: 1.5%;
-        font-size: 24px;
-        line-height: 30px;
+          padding-top: 1.5%;
+          font-size: 24px;
+          line-height: 30px;
       }
       p {
-        font-size: 18px;
-        line-height: 24px;
+          font-size: 18px;
+          line-height: 24px;
       }
 
       /* Video pitch and Action */
       .pitch {
-        padding: 2.5% 0%;
+          padding: 2.5% 0%;
       }
       .order {
-        padding: 2% 0%;
+          padding: 2% 0%;
       }
       .actions {
-        background-color: #343434;
-        padding: 3% 0%;
+          background-color: #343434;
+          padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
-        text-align: center;
+          text-align: center;
       }
       .statistics h3, .statistics p {
-        color: white;
+          color: white;
       }
 
       /* Marketing Copy and Footer */
       .copy {
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
-        text-align: justify;
+          padding-top: 2.5%;
+          padding-bottom: 2.5%;
+          text-align: justify;
       }
       .asset {
-        padding: 2.5% 0%;
+          padding: 2.5% 0%;
       }
       .footer {
-        color: #cccccc;
-        text-align: center;
+          color: #cccccc;
+          text-align: center;
       }
       .footer p {
-        font-size: 11px;
+          font-size: 11px;
       }
       .footer a {
-        color: #ccccff;
+          color: #ccccff;
       }
     </style>
   </head>
@@ -136,12 +135,12 @@
         <div class="span12">
           <h1>Handy Sketcher</h1>
         </div>
-      </div> 
+      </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Online 3D Sketching App for the <a href=https://www.leapmotion.com/>Leap Motion Controller</a></p>
+          <p class="lead">Online 3D Sketching App for the Leap Motion Controller</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -152,46 +151,54 @@
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
-              <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that look
-                different in horizontal and vertical layouts, illustrating
-                media queries. -->
-                <div class="linediv-l">
-                <h3>0</h3> <p>backers</p>
+          <div class="row-fluid">
+            <div class="span8 offset2">
+              <div class="row-fluid statistics">
+                <div class="span4">
+                  <!-- linediv-l and linediv-r give dividing lines that look
+                       different in horizontal and vertical layouts, illustrating
+                       media queries. -->
+                  <div class="linediv-l">
+                    <h3>0</h3> <p>backers</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-c">
-                  <h3>$0</h3> <p>of $3000</p>
+                <div class="span4">
+                  <div class="linediv-c">
+                    <h3>$0</h3> <p>of $3000</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-r">
-                <h3>100</h3> <p>days left</p>
+                <div class="span4">
+                  <div class="linediv-r">
+                    <h3>100</h3> <p>days left</p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 0%;"></div>
-              <div class="bar bar-warning" style="width: 100%;"></div>
+            <div class="row-fluid">
+              <div class="span10 offset1">
+                <!-- Bootstrap progress bar -->
+                <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+                <div class="thermometer progress active">
+                  <div class="bar bar-success" style="width: 0%;"></div>
+                  <div class="bar bar-warning" style="width: 100%;"></div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            <div class="row-fluid">
+              <div class="span6 offset3 order">
+                <!-- Standard Bootstrap button. -->
+                <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+                <button class="btn btn-success btn-large">Preorder</button>
+              </div>
+            </div>
+            <div class="row-fluid">
+              <div class="span8 offset2 social">
+                <!-- Social buttons are not included in default Bootstrap. -->
+                <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+                <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+                <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -222,11 +229,11 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            <strong>Handy Sketcher</strong> is a 3D Sketching tool that relies on the <a href=https://www.leapmotion.com/>Leap Motion Controller</a>.
-<br>
-If you can picture your idea in your mind,
-then mimicking it with your hands should be enough to output a 3D sketch of your thougts.
-I'll do the best to provide you with online easy-to-use features.
+            <strong>Handy Sketcher</strong> is a 3D Sketching tool that relies on the Leap Motion Controller.
+            <br>
+            If you can picture your idea in your mind,
+            then mimicking it with your hands should be enough to output a 3D sketch of your thougts.
+            I'll do the best to provide you with online easy-to-use features.
 
 
           </p>
@@ -240,59 +247,59 @@ I'll do the best to provide you with online easy-to-use features.
       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
       <div class="row-fluid faq">
-          <div class="span10 offset1">
-            <h3>FAQ</h3>
-            <div class="accordion" id="accordion3">
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion3" href="#collapseOne">
-                    What is the Leap Motion Controller?
-                  </a>
-                </div>
-                <div id="collapseOne" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    It is a small device that tracks your hands and fingers position precisly 
-                    such that you can interact with your computer in natural ways.
-                    <br>
-                    It is quite new and started shipping on July 22.
-                  </div>
+        <div class="span10 offset1">
+          <h3>FAQ</h3>
+          <div class="accordion" id="accordion3">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-parent="#accordion3" href="#collapseOne">
+                  What is the Leap Motion Controller?
+                </a>
+              </div>
+              <div id="collapseOne" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  It is a small device that tracks your hands and fingers position precisly
+                  such that you can interact with your computer in natural ways.
+                  <br>
+                  It is quite new and started shipping on July 22.
                 </div>
               </div>
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion3" href="#collapseTwo">
-                    Who am I?
-                  </a>
-                </div>
-                <div id="collapseTwo" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    I'm 22 years old French citizen, that just completed its MSc in Computer Science.
-                    I rencently got interested into startup as I started working for <a href=http://www.skimlab.com/>Skimlab</a>.
-Before that, I've been working in Strasbourg research lab and I was quite interested into Computer Graphics.
-I now put effort into combining both worlds and developping real graphic products.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion3" href="#collapseThree">
-                    What do I need to install?
-                  </a>
-                </div>
-                <div id="collapseThree" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    Nothing, it is an online app.
-                    Though, you'd need up-to-date graphic drivers and a web browser that supports webGL.
-                    Moreover you also need a Leap Motion Controller to use the app.
-                  </div>
-                </div>
-              </div>
-
             </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-parent="#accordion3" href="#collapseTwo">
+                  Who am I?
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  I'm 22 years old French citizen, that just completed its MSc in Computer Science.
+                  I rencently got interested into startup as I started working for Skimlab.
+                  Before that, I've been working in Strasbourg research lab and I was quite interested into Computer Graphics.
+                  I now put effort into combining both worlds and developping real graphic products.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-parent="#accordion3" href="#collapseThree">
+                  What do I need to install?
+                </a>
+              </div>
+              <div id="collapseThree" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  Nothing, it is an online app.
+                  Though, you'd need up-to-date graphic drivers and a web browser that supports webGL.
+                  Moreover you also need a Leap Motion Controller to use the app.
+                </div>
+              </div>
+            </div>
+
           </div>
+        </div>
 
       </div>
 
