analytics id and bitcoin

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-XXXXX-X']);
+      _gaq.push(['_setAccount', 'UA-42929181-1']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -210,6 +210,9 @@
               </div>
             </div>
             <div class="row-fluid">
+            <div class="span8 offset3">
+              <a class="coinbase-button" data-button-text="Preorder with Bitcoins" data-code="deb313ae977d4f80e06bc9a36d1cea4e" data-button-style="custom_large" href="https://coinbase.com/checkouts/deb313ae977d4f80e06bc9a36d1cea4e">Preorder with Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+            </div>
               <div class="span8 offset2 social">
                 <!-- Social buttons are not included in default Bootstrap. -->
                 <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
